Setup/Applications/app1/Services/app1/Manifests/Files/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app1-svc
  namespace: apps
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: app1-svc-apps.apps.ocp.nmandadhi.com
  to:
    kind: Service
    name: app1-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
